--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./server/bin/www --exec babel-node",
-    "test": "nodemon ./server/app.js --exec babel-node"
+    "test": "nodemon ./server/app.js --exec babel-node",
+    "transpile": "babel ./server --out-dir dist-server",
+    "clean": "rimraf dist-server"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -23,6 +25,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "rimraf": "^3.0.2"
   }
 }
