--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon ./server/bin/www --exec babel-node",
-    "prod": "cross-env NODE_ENV=production nodemon ./server/bin/www --exec babel-node",
+    "start": "nodemon ./server/bin/www --exec babel-node",
     "test": "nodemon ./server/app.js --exec babel-node",
     "transpile": "babel ./server --out-dir dist-server",
     "clean": "rimraf dist-server"
@@ -13,7 +12,6 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -27,7 +25,6 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
-    "cross-env": "^7.0.3",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2"
   }
