--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./server/bin/www --exec babel-node",
+    "dev": "pm2 start ecosystem.config.js --only proj-dev",
+    "prod": "pm2 start ecosystem.config.js --only proj-prod",
+    "start": "nodemon ./server/bin/www.js --exec babel-node",
     "test": "nodemon ./server/app.js --exec babel-node",
     "transpile": "babel ./server --out-dir dist-server",
     "clean": "rimraf dist-server"
@@ -24,6 +26,7 @@
     "@babel/node": "^7.16.8",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.17.0",
     "babel-loader": "^8.2.3",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2"
