--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "rimraf dist-server"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
